# gudvin

./: .gitignore  CMakeLists.txt
cmake/: FindGLFW.cmake  FindGLM.cmake
src/: config.hxx.in  defer.hxx  main.cpp  main.cxx  scope_guard.hxx
src/glfw/: error.hxx
src/vk/: allocation_callbacks.hxx  enumerate_instance_extension_properties.hxx  enumerate_instance_layer_properties.hxx  enumerate_physical_devices.hxx  error.cpp  error.hpp  error.hxx  handle.hxx  instance.hxx  result.hxx
